--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     gapi.load('auth2', function(){
       // Retrieve the singleton for the GoogleAuth library and set up the client.
       auth2 = gapi.auth2.init({
+        // make the below client_id be your own from google console
         client_id: '543558933111-jem87i5i8aspa247qqgr900a5lfhs6st.apps.googleusercontent.com',
         cookiepolicy: 'single_host_origin',
         // Request scopes in addition to 'profile' and 'email'
